Config change done

--- a/.github/workflows/main_azure-blog.yml
+++ b/.github/workflows/main_azure-blog.yml
@@ -77,4 +77,5 @@ jobs:
         with:
           app-name: 'azure-blog'
           slot-name: 'Production'
+          package: './azure_django'
           
